	  to local variables and longjmp
	* uwm/wingroups.c: removed an unused variable
	* uwm/uwm.c: included properties.h for SetWinMapState prototype
	* uwm/rubber.h: included special.h for GrabServer prototype
	* uwm/workspaces.h: corrected a typo in BroadcastWorkSpacesInfo proto
	* uwm/rubber.c: included special.h for GrabServer prototype

2001-04-22  Christian Ruppert <arc@gmx.li>

	* uwm/properties.c: changed SetWinMapState to unmap withdrawn windows
	  in any case.

2001-04-22  Christian Ruppert <arc@gmx.li>

	* uwm/handlers.c: shaped window titles are now also refreshed.
	* uwm/handlers.c: shaped window's titles are always centered.
	* uwm/properties.c: changed window name refreshing to work with new
	  shaped windows
	* uwm/uwm.c: changed CatchWindows not to deultimize withdrawn windows.
	* uwm/uwm.h added uc->title.x and uc->title.y
	* uwm/widgets.c: changed title and border drawing functions to work
	  with new shapes support.
	* uwm/windows.c: changed DrawWinBorder, MoveResizeWin, EnborderWin and
	  ShapeFrame to work with new shapes support

2001-04-20  Christian Ruppert <arc@gmx.li>

	* uwm/windows.c: a small bugfix so that windowgravity is now only taken
	  into account in case we don't place the window ourselves.

2001-04-19  Christian Ruppert <arc@gmx.li>

	* uwm/windows.c: cleaned up UltimizeWin
	* uwm/wingroups.c: added support for OverrideRedirect group leaders
	  (although OverrideRedir. group leaders don't really make sense imho)
	* uwm/wingroups.h: some changes for compatibility with OverrideRedirect
	  group leaders.
        * uwm/workspaces.c: some corrections for new wingroups.h

2001-04-16  Christian Ruppert <arc@gmx.li>

	* uwm/windows.c: iconified windows in winmenu are now listed using their
	  iconnames instead of their titles.
	* uwm/workspaces.c: added function Win2WS
	* uwm/workspaces.h: added prototype for Win2WS
	* uwm/wingroups.c: all group members are now initially placed on the
	  same workspace.